# GT_GAME_CONTROLER_V016

./: CMakeLists.txt  GT_GAME_CONTROLER_v015.bat  GT_GAME_CONTROLER_v020.bat  KISA_KURULUM_V015.txt  README.md  README_GT_GAME_CONTROLER_v015_TR.md  README_GT_GAME_CONTROLER_v017_TR.md  README_GT_GAME_CONTROLER_v018_TR.md  README_GT_GAME_CONTROLER_v019_TR.md  build_uf2.yml  controller_ESKI_CALISAN_KURTARMA.uf2  gt_game_controler_v015.py  gt_game_controler_v020.py
GT_GAME_CONTROLER_3PICO_v019_CLEAN_SOURCE_PACKAGE/GT_GAME_CONTROLER_3PICO_v019_CLEAN_SOURCE_PACKAGE/: CMakeLists.txt  GT_GAME_CONTROLER_v019.bat  KISA_KURULUM_V019.txt  README_GT_GAME_CONTROLER_v019_TR.md  gt_game_controler_v019.py  piko1_MEVCUT.uf2
GT_GAME_CONTROLER_3PICO_v021_CLEAN_SOURCE_PACKAGE/GT_GAME_CONTROLER_3PICO_v021_CLEAN_SOURCE_PACKAGE/: CMakeLists.txt  GT_GAME_CONTROLER_v021.bat  README_GT_GAME_CONTROLER_v020_TR.md  README_GT_GAME_CONTROLER_v021_TR.md  gt_game_controler_v021.py
GT_GAME_CONTROLER_3PICO_v021_CLEAN_SOURCE_PACKAGE/GT_GAME_CONTROLER_3PICO_v021_CLEAN_SOURCE_PACKAGE/firmware/controller/: keyboard_main.c
GT_GAME_CONTROLER_3PICO_v022_CLEAN_SOURCE_PACKAGE/: CMakeLists.txt  DIREKT_GITHUB_LINKLERI.txt  GT_GAME_CONTROLER_v022.bat  README_GT_GAME_CONTROLER_v022_TR.md  gt_game_controler_v022.py
GT_GAME_CONTROLER_3PICO_v022_CLEAN_SOURCE_PACKAGE/firmware/controller/: keyboard_main.c
GT_GAME_CONTROLER_3PICO_v023_V021_STYLE_SOURCE_PACKAGE/GT_GAME_CONTROLER_3PICO_v023_V021_STYLE_SOURCE_PACKAGE/: CMakeLists.txt  GT_GAME_CONTROLER_v023.bat  README_GT_GAME_CONTROLER_v023_TR.md  gt_game_controler_v023.py  piko2_MEVCUT.uf2
firmware/controller/: keyboard_main.c
(+4 files in other folders)
